--- a/ПР2/ПР_2_Проектный_практикум_по_разработке_ETL_решений.ipynb
+++ b/ПР2/ПР_2_Проектный_практикум_по_разработке_ETL_решений.ipynb
@@ -67,7 +67,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -104,7 +104,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -531,7 +531,7 @@
               "Dask Name: to_pyarrow_string, 2 graph layers"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -543,7 +543,7 @@
         "       'Double Parking Violation': 'object',\n",
         "       'Hydrant Violation': 'object',\n",
         "       'No Standing or Stopping Violation': 'object',\n",
-        "       'Violation Legal Code': 'object'}, assume_missing=True)\n",
+        "       'Violation Legal Code': 'object'}, assume_missing=True, low_memory=False)\n",
         "df"
       ]
     },
@@ -584,7 +584,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -604,7 +604,7 @@
               "Dask Name: to_pyarrow_string, 6 graph layers"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -630,7 +630,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -650,7 +650,7 @@
               "Dask Name: mul, 11 graph layers"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -681,7 +681,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -694,37 +694,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "[                                        ] | 0% Completed | 11.01 sms"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "c:\\Users\\Nastya\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\dask\\dataframe\\io\\csv.py:195: DtypeWarning: Columns (18,38) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-            "  df = reader(bio, **kwargs)\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "[#################################       ] | 84% Completed | 89.88 s"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "c:\\Users\\Nastya\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\dask\\dataframe\\io\\csv.py:195: DtypeWarning: Columns (18,38) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-            "  df = reader(bio, **kwargs)\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "[########################################] | 100% Completed | 99.82 s\n"
+            "[########################################] | 100% Completed | 121.90 s\n"
           ]
         },
         {
@@ -784,7 +754,7 @@
               "dtype: float64"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -824,7 +794,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -843,44 +813,14 @@
             "       'Double Parking Violation', 'Latitude', 'Longitude', 'Community Board',\n",
             "       'Community Council ', 'Census Tract', 'BIN', 'BBL', 'NTA'],\n",
             "      dtype='string')\n",
-            "[                                        ] | 0% Completed | 595.00 us"
+            "[                                        ] | 0% Completed | 562.20 us"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "[##############                          ] | 36% Completed | 50.65 ss"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "c:\\Users\\Nastya\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\dask\\dataframe\\io\\csv.py:195: DtypeWarning: Columns (18,38) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-            "  df = reader(bio, **kwargs)\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "[#####################                   ] | 54% Completed | 68.99 s"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "c:\\Users\\Nastya\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\dask\\dataframe\\io\\csv.py:195: DtypeWarning: Columns (18,38) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-            "  df = reader(bio, **kwargs)\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "[########################################] | 100% Completed | 107.86 s\n"
+            "[########################################] | 100% Completed | 126.94 s\n"
           ]
         }
       ],
@@ -947,7 +887,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 15,
       "metadata": {
         "id": "N0ObNZxJe8q4"
       },
@@ -959,7 +899,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -976,7 +916,7 @@
               "<IPython.core.display.Image object>"
             ]
           },
-          "execution_count": 10,
+          "execution_count": 16,
           "metadata": {},
           "output_type": "execute_result"
         }
